--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@
 }
 
 @font-face {
-    font-family:"Perpetua-Titling-MT";
+    font-family: "Perpetua-Titling-MT";
     src: url(/assets/font/Perpetua-Titling-MT\ \(1\)/);
 }
 
@@ -218,8 +218,9 @@
 }
 
 /* =============breacking============ */
-.max-w-475 {
-    max-width: 475px;
+
+.max_w_570 {
+    max-width: 470px;
 }
 
 .py_64 {
@@ -227,25 +228,30 @@
     padding-bottom: 64px;
 }
 
-.ml_30 {
-    margin-left: 30px;
-}
+
 
 .border_transprant {
     border: transparent;
 }
 
 .border_bottom {
-    border-bottom: 1px solid var(--clr-black);
+    border-width: 0 0 1px 0;
+    border-style: solid;
+    border-color: var(--clr-black);
+    padding: 8px 8px 0 8px;
+    transition: all 300ms linear;
+}
+
+.border_bottom:hover {
+    border-width: 1px 1px 1px 1px;
+    box-shadow: 10px 10px 15px -2px black;
 }
 
 .bottom_border {
     border-bottom: 2px solid var(--clr-black)
 }
 
-.breking_border_left {
-    border-left: 2px solid var(--clr-black);
-}
+
 
 .img_border {
     border-left: 2px solid var(--clr-black);
@@ -288,6 +294,10 @@
         height: 2px;
         background: var(--clr-black);
     }
+
+    .breacking_img_bottomborder {
+        border-bottom: 2px solid var(--clr-black);
+    }
 }
 
 @media (min-width:576px) {
@@ -328,12 +338,28 @@
         margin-right: -20px;
     }
 
+    .ml_30 {
+        margin-left: 30px;
+    }
+
     .gap_178 {
         gap: 178px;
     }
 
+    .max-w-475 {
+        max-width: 475px;
+    }
+
     .justify_content_end {
         justify-content: end;
+    }
+
+    .breking_border_left {
+        border-left: 2px solid var(--clr-black);
+    }
+
+    .max_w_570 {
+        max-width: 570px;
     }
 
 
