--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,9 +30,11 @@
 .ff-modern {
     font-family: "moderno", sans-serif;
 }
-.cursor_pointer{
+
+.cursor_pointer {
     cursor: pointer;
 }
+
 /*============font-weight========*/
 .fw-300 {
     font-weight: 300;
@@ -262,7 +264,6 @@
 }
 
 /* ==============latest-tweets========== */
-
 .gap_11 {
     gap: 11px;
 }
@@ -278,6 +279,33 @@
 .tweets_box {
     max-width: 391px;
     padding: 20px 27px;
+}
+
+/* =================minting============= */
+.mb_35 {
+    margin-bottom: 35px;
+}
+
+.btn_border {
+    border: 2px solid var(--clr-black);
+}
+
+.btn_border_right {
+    border-right: 2px solid var(--clr-black);
+}
+
+.mint_btn {
+    padding: 12px 16px;
+    background: var(--clr-yellow);
+}
+
+/* ================Etiam eget============ */
+.max-w-121 {
+    max-width: 121px;
+}
+
+.gap-116 {
+    gap: 116px;
 }
 
 @media (max-width:576px) {
@@ -426,6 +454,14 @@
         max-width: 475px;
     }
 
+    .max_w_570 {
+        max-width: 570px;
+    }
+
+    .max-w-438 {
+        max-width: 438px;
+    }
+
     .justify_content_end {
         justify-content: end;
     }
@@ -434,9 +470,6 @@
         border-left: 2px solid var(--clr-black);
     }
 
-    .max_w_570 {
-        max-width: 570px;
-    }
 
 
 
