--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -309,31 +309,53 @@
 }
 
 /* ================timeline============== */
+.py_90 {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 .container {
     margin-left: 0;
     margin-right: 0;
 }
 
-/* The actual timeline (the vertical ruler) */
+.max-w-495 {
+    max-width: 495px;
+}
+
+.max-w-460 {
+    max-width: 460px;
+}
+
 .timeline {
     position: relative;
     max-width: 1200px;
     margin: 0 auto;
 }
 
-/* The actual timeline (the vertical ruler) */
 .timeline::after {
     content: '';
     position: absolute;
-    width: 6px;
-    background-color: white;
+    width: 2px;
+    background-color: var(--clr-black);
     top: 0;
     bottom: 0;
     left: 50%;
-    margin-left: -3px;
+    margin-left: -45px;
 }
 
-/* Container around content */
+.arrow {
+    border: solid var(--clr-black);
+    border-width: 0 2px 2px 0;
+    display: inline-block;
+    transform: rotate(44deg);
+    width: 20px;
+    height: 20px;
+    left: 45.5%;
+    bottom: 0;
+    position: absolute;
+}
+
 .container {
     padding: 10px 40px;
     position: relative;
@@ -341,102 +363,52 @@
     width: 50%;
 }
 
-/* The circles on the timeline */
 .container::after {
     content: '';
     position: absolute;
-    width: 25px;
-    height: 25px;
-    right: -17px;
-    background-color: white;
-    border: 4px solid #FF9F55;
-    top: 15px;
+    width: 59px;
+    height: 59px;
+    right: 8px;
+    background-color: var(--clr-white);
+    border: 5px solid var(--clr-black);
+    top: 0;
     border-radius: 50%;
     z-index: 1;
+    background-image: url(../images/svg/timeline_svg.svg);
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
-
-/* Place the container to the left */
 .left {
     left: 0;
 }
 
-/* Place the container to the right */
 .right {
     left: 50%;
 }
 
-/* Add arrows to the left container (pointing right) */
-.left::before {
-    content: " ";
-    height: 0;
-    position: absolute;
-    top: 22px;
-    width: 0;
-    z-index: 1;
-    right: 30px;
-    border: medium solid white;
-    border-width: 10px 0 10px 10px;
-    border-color: transparent transparent transparent white;
-}
 
-/* Add arrows to the right container (pointing left) */
-.right::before {
-    content: " ";
-    height: 0;
-    position: absolute;
-    top: 22px;
-    width: 0;
-    z-index: 1;
-    left: 30px;
-    border: medium solid white;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
-}
-
-/* Fix the circle for containers on the right side */
 .right::after {
-    left: -16px;
+    left: -69px;
 }
 
-/* The actual content */
-.content {
-    padding: 20px 30px;
-    background-color: white;
-    position: relative;
-    border-radius: 6px;
-}
-
-/* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 600px) {
 
-    /* Place the timelime to the left */
     .timeline::after {
-        left: 31px;
+        left: 76px;
     }
 
-    /* Full-width containers */
     .container {
         width: 100%;
         padding-left: 70px;
         padding-right: 25px;
     }
 
-    /* Make sure that all arrows are pointing leftwards */
-    .container::before {
-        left: 60px;
-        border: medium solid white;
-        border-width: 10px 10px 10px 0;
-        border-color: transparent white transparent transparent;
-    }
-
-    /* Make sure all circles are at the same spot */
     .left::after,
     .right::after {
-        left: 15px;
+        left: 1px;
     }
 
-    /* Make all right containers behave like the left ones */
     .right {
         left: 0%;
     }
