--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
     box-sizing: border-box;
     list-style-type: none !important;
     text-decoration: none !important;
+    scroll-behavior: smooth;
 }
 
 @font-face {
@@ -119,6 +120,9 @@
 ::-webkit-scrollbar {
     display: none;
 }
+/* .link:hover{
+    font-weight: 600;
+} */
 
 .gap-7 {
     gap: 7px;
@@ -143,7 +147,7 @@
 }
 
 .gap_178 {
-    gap: 25px;
+    gap: 14px;
 }
 
 .flex_wrap {
