--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -16,9 +16,15 @@
     --clr-green: #00A106;
     --clr-brown: #70675F;
     --clr-cream: #D1C9C2;
-   
+    --clr-blackShadaw: #00000040;
+
 }
-.color-cream{
+
+.color-blackShadaw {
+    color: var(--clr-blackShadaw);
+}
+
+.color-cream {
     color: var(--clr-cream);
 }
 
