--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,9 +120,33 @@
 ::-webkit-scrollbar {
     display: none;
 }
-/* .link:hover{
-    font-weight: 600;
-} */
+
+.nav_link:hover {
+    text-shadow: 0 0 .65px #333, 0 0 .65px #333;
+}
+
+.nav_link {
+    position: relative;
+}
+
+.nav_link::after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 2px;
+    left: 0;
+    bottom: 0;
+    background: var(--clr-black);
+    transition: all 100ms linear;
+}
+
+.nav_link:hover::after {
+    width: 100%;
+}
+
+.heading_shadaw {
+    text-shadow: 1px 1px 1px var(--clr-blackShadaw);
+}
 
 .gap-7 {
     gap: 7px;
@@ -276,13 +300,8 @@
     gap: 55px;
 }
 
-.max-w-327 {
-    max-width: 327px;
-}
-
 .tweets_box {
-    max-width: 391px;
-    padding: 20px 27px;
+    padding: 15px 10px;
 }
 
 /* =================minting============= */
@@ -414,8 +433,6 @@
     padding: 27px 27px;
 }
 
-
-
 /* =================FAQ============== */
 .max-w-992 {
     max-width: 992px;
@@ -475,6 +492,27 @@
     padding-bottom: 32px;
 }
 
+/* ============back-to-top========== */
+.topBtn {
+    width: 30px;
+    height: 30px;
+    background: var(--clr-black);
+    border-radius: 50%;
+    position: fixed;
+    bottom: 40px;
+    right: 10%;
+    cursor: pointer;
+    opacity: 0;
+    transition: all 300ms linear;
+}
+
+.topBtn.show {
+    opacity: 1;
+}
+
+.topBtn:hover {
+    box-shadow: 0px 3px 15px 3px var(--clr-black);
+}
 
 @media screen and (max-width: 600px) {
 
@@ -575,12 +613,13 @@
         align-items: center;
     }
 
-    .tweet_border_left {
-        border-left: 1px solid var(--clr-black);
+    .tweets_box {
+        max-width: 391px;
+        padding: 20px 27px;
     }
 
-    .tweet_border_right {
-        border-right: 1px solid var(--clr-black);
+    .tweet_border_left {
+        border-left: 1px solid var(--clr-black);
     }
 
     .tweet_right_border {
@@ -590,8 +629,6 @@
     .tweet_left_border {
         border-left: 1px solid var(--clr-black);
     }
-
-
 }
 
 @media (min-width:768px) {
@@ -653,6 +690,10 @@
         margin-left: 30px;
     }
 
+    .mb-37 {
+        margin-bottom: 0;
+    }
+
     .py_64 {
         padding-top: 64px;
         padding-bottom: 64px;
@@ -701,5 +742,24 @@
 
     .padding_team2 {
         padding: 45px 81px;
+    }
+
+    .tweet_border_right {
+        border-right: 1px solid var(--clr-black);
+    }
+
+    .tweet_border_left1 {
+        border-left: 1px solid var(--clr-black);
+    }
+
+    .topBtn {
+        width: 50px;
+        height: 50px;
+    }
+}
+
+@media (min-width:1200px) {
+    .max-w-327 {
+        min-width: 327px;
     }
 }
