--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,9 +120,6 @@
 ::-webkit-scrollbar {
     display: none;
 }
-/* .link:hover{
-    font-weight: 600;
-} */
 
 .gap-7 {
     gap: 7px;
@@ -701,5 +698,9 @@
 
     .padding_team2 {
         padding: 45px 81px;
+    }
+
+    .tweet_border_left1 {
+        border-left: 1px solid var(--clr-black);
     }
 }
