apply button border in minting section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,6 +308,9 @@
 }
 
 /* =================minting============= */
+.max-w-238{
+    max-width: 238px;
+}
 .mb_35 {
     margin-bottom: 15px;
 }
@@ -324,6 +327,7 @@
     padding: 12px 16px;
     background: var(--clr-yellow);
 }
+
 
 /* ================Etiam eget============ */
 .max-w-121 {
@@ -676,14 +680,6 @@
     .lh-101 {
         line-height: 101px;
     }
-
-    /* .ml_-20 {
-        margin-left: -20px;
-    }
-
-    .mr_-20 {
-        margin-right: -20px;
-    } */
 
     .ml_30 {
         margin-left: 30px;
